--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "if-env TYPE=server && (cd server && npm install) || (cd client && npm install)",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
